<resources>
    <string name="app_name">healthcare</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="rePassword">Jelszó megerősítés</string>
    <string name="email">E-mail</string>
    <string name="full_name">Teljes név</string>
</resources>